{
  "+iFjzy": "Login with",
  "//VHfC": "Know for",
  "/QsGmC": "Born on",
  "0CRYrS": "{title} - Movies",
  "1tj5VZ": "Add to watchlist",
  "2xXGzb": "movies",
  "3wSEx3": "Season",
  "4Cltcc": "Read More",
  "4NCdJM": "Posters",
  "4XfMux": "Videos",
  "5RN6T/": "Serie",
  "6PpgeA": "Movies by categories",
  "8quEg9": "results",
  "9Pg5Uj": "Series by categories",
  "AEBO3C": "Upcoming movies",
  "ASO7Cw": "Get Recommendations based on your profile",
  "BEX6A7": "My profile",
  "C81/uG": "Logout",
  "CBwLG1": "Series on",
  "COeOGK": "Removed from favorites",
  "Clg06n": "S{season} · E{episode}",
  "DOPilz": "Pictures",
  "EB9asy": "No movies on watchlist",
  "EhtHdK": "y",
  "FQ0kXF": "season",
  "Fip4H8": "Images",
  "H2GZxx": "Added to watchlist",
  "INk7fF": "series",
  "IaqouO": "Removed from watchlist",
  "J+DlxR": "{count} results found",
  "K0XQE7": "Manage your favourite films and series",
  "KkuYls": "Are you sure you want to leave?",
  "LMqQH5": "No favorite movies found",
  "NCupKV": "Streaming",
  "NfdtQ8": "'s series",
  "OQEcON": "Add movies and series on your watchlist",
  "OoZY78": "Series for you",
  "Oux7WC": "{count} episodes",
  "PC6Igt": "Added to favorites",
  "RzXthk": "movie",
  "TKM0PN": "Use your TMDB account to sync your watchlist, favorite and more.",
  "TdbPNK": "Me",
  "UhsiMg": "What would you like to watch?",
  "WkrNSk": "English",
  "X5hQXG": "Remove from watchlist",
  "ZUCQbH": "Top 10 Movies",
  "a5msuh": "Yes",
  "arTEbw": "Casting",
  "bxLtNh": "In the same spirit",
  "bxnWhY": "result",
  "cE4Hfw": "Discover",
  "dUxyza": "Reviews",
  "eBDmdm": "Backdrops",
  "eG1C0k": "Remove from favorites",
  "eSb1/p": "{title} - Series",
  "elUgUG": "No favorite series found",
  "eo4WjQ": "Stars",
  "f6OCCo": "My series watchlist",
  "fAUo5l": "Crew",
  "g04JBN": "Guest stars",
  "h1EKCz": "My movies watchlist",
  "hFKSw/": "Watch on",
  "hVXARm": "Oh no! We have found nothing 🥺",
  "inHmAw": "My Tv Watchlist",
  "jB/Lmw": "Read Less",
  "jMuk1E": "Died on",
  "mgcS1E": "Popular series of all time",
  "mnB7Ay": "Latest trends",
  "n82YXC": "My lists",
  "njAU72": "French",
  "o2T5zr": "Family movies",
  "oUWADl": "No",
  "oXYUTN": "My Favorites Movies",
  "orvpWh": "Go back",
  "rCmsRa": "Season {season} · Episode {episode}",
  "rbrahO": "Close",
  "rwqNY9": "serie",
  "tRwj81": "Search for a movie, series or person",
  "tWX1j9": "Add to favorites",
  "u+53eO": "Movies for you",
  "u06TNf": "Movie",
  "u2t1Js": "Top 10 Series",
  "ujsrRx": "Log Out 💔",
  "vAP/To": "My Movies Watchlist",
  "vWAJia": "My Favorites TV",
  "wLlKjy": "Watch the trailer",
  "x2c3j1": "No tv on watchlist",
  "xf6y+C": "Episode {number}",
  "xmcVZ0": "Search",
  "zQvVDJ": "All",
  "zTL1+t": "seasons",
  "zzTAaI": "In Theaters"
}