export { default } from '~/screens/video'
