...
      >
        <Button
          isCustomChildren
          isTransparent
          onPress={() => navigation.goBack()}
          style={styles.closeButton}
          testID="header-back-button"
        >
          <Icon name="arrow-left" size={26} />
        </Button>
        <Animated.View
          style={{
            opacity: scrollY?.interpolate({
...
